--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "singleQuote": true,
   "jsxSingleQuote": false,
   "bracketSpacing": true,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "printWidth": 80,
   "tabWidth": 2,
   "arrowParens": "always",
